twig tagları denendi

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,10 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        {% block name %}Fatih{% endblock %}
+
+        {% block for_test %}{% endblock %}
+        {% block if_test %}{% endblock %}
+        {% block set_test %}{% endblock %}
     </body>
 </html>
