--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,11 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            <link href="{{ asset('css/main.css') }}" rel="stylesheet">
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+            <script src="{{ asset('js/main.js') }}"></script>
         {% endblock %}
     </head>
     <body>
